ecmascript/parser/tests/typescript-errors/tsc/statements/continueStatements/invalidForContinueStatements/input.ts.stderr
error: A 'continue' statement can only jump to a label of an enclosing iteration statement
 --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidForContinueStatements/input.ts:7:1
  |
7 | continue;
  | ^^^^^^^^^

error: Jump target cannot cross function boundary
  --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidForContinueStatements/input.ts:11:9
   |
11 | for(;;) continue TWO;
   |         ^^^^^^^^^^^^^

error: A 'continue' statement can only jump to a label of an enclosing iteration statement
  --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidForContinueStatements/input.ts:17:9
   |
17 |         continue TWO;
   |         ^^^^^^^^^^^^^

error: A 'continue' statement can only jump to a label of an enclosing iteration statement
  --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidForContinueStatements/input.ts:24:9
   |
24 |         continue THREE;
   |         ^^^^^^^^^^^^^^^

error: Jump target cannot cross function boundary
  --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidForContinueStatements/input.ts:30:5
   |
30 |     continue FIVE;
   |     ^^^^^^^^^^^^^^

error: Jump target cannot cross function boundary
  --> $DIR/tests/typescript-errors/tsc/statements/continueStatements/invalidForContinueStatements/input.ts:39:5
   |
39 |     continue NINE;
   |     ^^^^^^^^^^^^^^

